--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "five   2002  Nevada  2.8"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -913,13 +913,14 @@
        "five   2002  Nevada  2.8  -3.0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "val = pd.Series([-1, -2, -3], index=['two', 'three', 'five'])\n",
+    "#val = pd.Series([-1, -2, -3])\n",
     "df['debt'] = val\n",
     "df"
    ]
@@ -1485,7 +1486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -1498,7 +1499,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1510,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -1524,7 +1525,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1535,27 +1536,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "a    7\n",
-       "b    5\n",
-       "c    3\n",
-       "d    9\n",
-       "e    0\n",
-       "dtype: int64"
+       "a    7.0\n",
+       "b    5.0\n",
+       "c    3.0\n",
+       "d    9.0\n",
+       "e    0.0\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s.reindex(['a', 'b', 'c', 'd', 'e'], fill_value=0)"
+    "s.reindex(['a', 'b', 'c', 'd', 'e'], fill_value=0.)"
    ]
   },
   {
@@ -1876,7 +1877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -1928,7 +1929,7 @@
        "b   10     15   13"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1940,7 +1941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -1985,7 +1986,7 @@
        "a    8     11    9"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -2042,7 +2043,7 @@
        "b   13"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2791,35 +2792,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    1\n",
-       "1    5\n",
-       "2    3\n",
-       "3    6\n",
-       "4    7\n",
-       "5    8\n",
-       "6    4\n",
-       "dtype: int64"
+       "0    1.0\n",
+       "1    5.0\n",
+       "2    3.0\n",
+       "3    6.0\n",
+       "4    7.0\n",
+       "5    8.0\n",
+       "6    4.0\n",
+       "7    NaN\n",
+       "dtype: float64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "s = pd.Series([1,5,3,6,7,8,4])\n",
+    "from numpy import nan as NA\n",
+    "s = pd.Series([1,5,3,6,7,8,4,NA])\n",
     "s"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -2836,7 +2839,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3396,16 +3399,16 @@
     {
      "data": {
       "text/plain": [
-       "a  1   -1.682715\n",
-       "   2   -1.344346\n",
-       "   3    0.134247\n",
-       "b  1   -0.262493\n",
-       "   2    1.157823\n",
-       "   3   -0.451411\n",
-       "c  1   -0.354250\n",
-       "   2   -0.049379\n",
-       "d  2   -0.447073\n",
-       "   3    0.561390\n",
+       "a  1   -0.555228\n",
+       "   2   -0.813057\n",
+       "   3   -0.411028\n",
+       "b  1    1.275525\n",
+       "   2   -1.413706\n",
+       "   3   -0.916066\n",
+       "c  1    0.453247\n",
+       "   2    0.591491\n",
+       "d  2   -0.545720\n",
+       "   3    0.288843\n",
        "dtype: float64"
       ]
      },
@@ -3428,9 +3431,9 @@
     {
      "data": {
       "text/plain": [
-       "1   -0.262493\n",
-       "2    1.157823\n",
-       "3   -0.451411\n",
+       "1    1.275525\n",
+       "2   -1.413706\n",
+       "3   -0.916066\n",
        "dtype: float64"
       ]
      },
@@ -3451,11 +3454,11 @@
     {
      "data": {
       "text/plain": [
-       "b  1   -0.262493\n",
-       "   2    1.157823\n",
-       "   3   -0.451411\n",
-       "d  2   -0.447073\n",
-       "   3    0.561390\n",
+       "b  1    1.275525\n",
+       "   2   -1.413706\n",
+       "   3   -0.916066\n",
+       "d  2   -0.545720\n",
+       "   3    0.288843\n",
        "dtype: float64"
       ]
      },
@@ -3502,27 +3505,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>a</th>\n",
-       "      <td>-1.682715</td>\n",
-       "      <td>-1.344346</td>\n",
-       "      <td>0.134247</td>\n",
+       "      <td>-0.555228</td>\n",
+       "      <td>-0.813057</td>\n",
+       "      <td>-0.411028</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>b</th>\n",
-       "      <td>-0.262493</td>\n",
-       "      <td>1.157823</td>\n",
-       "      <td>-0.451411</td>\n",
+       "      <td>1.275525</td>\n",
+       "      <td>-1.413706</td>\n",
+       "      <td>-0.916066</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>c</th>\n",
-       "      <td>-0.354250</td>\n",
-       "      <td>-0.049379</td>\n",
+       "      <td>0.453247</td>\n",
+       "      <td>0.591491</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>d</th>\n",
        "      <td>NaN</td>\n",
-       "      <td>-0.447073</td>\n",
-       "      <td>0.561390</td>\n",
+       "      <td>-0.545720</td>\n",
+       "      <td>0.288843</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3530,10 +3533,10 @@
       ],
       "text/plain": [
        "          1         2         3\n",
-       "a -1.682715 -1.344346  0.134247\n",
-       "b -0.262493  1.157823 -0.451411\n",
-       "c -0.354250 -0.049379       NaN\n",
-       "d       NaN -0.447073  0.561390"
+       "a -0.555228 -0.813057 -0.411028\n",
+       "b  1.275525 -1.413706 -0.916066\n",
+       "c  0.453247  0.591491       NaN\n",
+       "d       NaN -0.545720  0.288843"
       ]
      },
      "execution_count": 76,
@@ -3555,16 +3558,16 @@
     {
      "data": {
       "text/plain": [
-       "a  1   -1.682715\n",
-       "   2   -1.344346\n",
-       "   3    0.134247\n",
-       "b  1   -0.262493\n",
-       "   2    1.157823\n",
-       "   3   -0.451411\n",
-       "c  1   -0.354250\n",
-       "   2   -0.049379\n",
-       "d  2   -0.447073\n",
-       "   3    0.561390\n",
+       "a  1   -0.555228\n",
+       "   2   -0.813057\n",
+       "   3   -0.411028\n",
+       "b  1    1.275525\n",
+       "   2   -1.413706\n",
+       "   3   -0.916066\n",
+       "c  1    0.453247\n",
+       "   2    0.591491\n",
+       "d  2   -0.545720\n",
+       "   3    0.288843\n",
        "dtype: float64"
       ]
      },
@@ -4644,7 +4647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -4677,36 +4680,36 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.593737</td>\n",
-       "      <td>-0.645380</td>\n",
+       "      <td>-1.118751</td>\n",
+       "      <td>-0.836633</td>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.810359</td>\n",
-       "      <td>-1.467364</td>\n",
+       "      <td>0.203812</td>\n",
+       "      <td>1.066399</td>\n",
        "      <td>a</td>\n",
        "      <td>two</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.737866</td>\n",
-       "      <td>1.136520</td>\n",
+       "      <td>-0.529777</td>\n",
+       "      <td>1.404983</td>\n",
        "      <td>b</td>\n",
        "      <td>one</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.532838</td>\n",
-       "      <td>1.288599</td>\n",
+       "      <td>1.058585</td>\n",
+       "      <td>0.056618</td>\n",
        "      <td>b</td>\n",
        "      <td>two</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>-0.265424</td>\n",
-       "      <td>1.224512</td>\n",
+       "      <td>-0.077810</td>\n",
+       "      <td>0.644145</td>\n",
        "      <td>a</td>\n",
        "      <td>one</td>\n",
        "    </tr>\n",
@@ -4716,14 +4719,14 @@
       ],
       "text/plain": [
        "      data1     data2 key1 key2\n",
-       "0  1.593737 -0.645380    a  one\n",
-       "1  0.810359 -1.467364    a  two\n",
-       "2 -0.737866  1.136520    b  one\n",
-       "3  0.532838  1.288599    b  two\n",
-       "4 -0.265424  1.224512    a  one"
+       "0 -1.118751 -0.836633    a  one\n",
+       "1  0.203812  1.066399    a  two\n",
+       "2 -0.529777  1.404983    b  one\n",
+       "3  1.058585  0.056618    b  two\n",
+       "4 -0.077810  0.644145    a  one"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4738,16 +4741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.SeriesGroupBy object at 0x118431b70>"
+       "<pandas.core.groupby.SeriesGroupBy object at 0x114643240>"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4766,8 +4769,8 @@
      "data": {
       "text/plain": [
        "key1\n",
-       "a    0.712891\n",
-       "b   -0.102514\n",
+       "a   -0.505419\n",
+       "b    0.323467\n",
        "Name: data1, dtype: float64"
       ]
      },
