--- a/movie-ratings/movie.ipynb
+++ b/movie-ratings/movie.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
        "4        5   33      F       other    15213"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -233,12 +235,121 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Movie table"
+    "## converting unix time stamp"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(1997, 12, 4, 7, 55, 49)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "datetime.datetime.fromtimestamp(881250949)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1997-12-04 07:55:49\n",
+       "1       1998-04-04 12:22:22\n",
+       "2       1997-11-06 23:18:36\n",
+       "3       1997-11-26 21:02:03\n",
+       "4       1998-02-01 21:33:16\n",
+       "5       1998-01-07 06:20:06\n",
+       "6       1997-12-03 09:51:28\n",
+       "7       1998-04-03 11:34:27\n",
+       "8       1998-02-01 01:20:17\n",
+       "9       1997-12-31 13:16:53\n",
+       "10      1997-11-12 14:07:14\n",
+       "11      1997-11-17 07:38:45\n",
+       "12      1997-10-05 02:05:40\n",
+       "13      1998-03-27 14:59:54\n",
+       "14      1998-02-21 15:40:57\n",
+       "15      1997-11-13 21:28:38\n",
+       "16      1997-11-11 09:47:39\n",
+       "17      1997-11-14 12:36:34\n",
+       "18      1997-09-21 02:42:24\n",
+       "19      1998-04-08 16:47:17\n",
+       "20      1998-01-30 08:13:34\n",
+       "21      1998-04-16 07:54:12\n",
+       "22      1997-10-26 08:55:20\n",
+       "23      1997-09-21 02:24:38\n",
+       "24      1998-02-17 09:28:52\n",
+       "25      1997-11-10 13:16:06\n",
+       "26      1998-04-12 18:14:54\n",
+       "27      1998-01-02 05:40:50\n",
+       "28      1997-10-01 16:10:01\n",
+       "29      1997-10-14 13:33:05\n",
+       "                ...        \n",
+       "99970   1997-11-19 09:12:53\n",
+       "99971   1997-10-05 00:38:41\n",
+       "99972   1997-10-17 18:17:27\n",
+       "99973   1997-09-20 15:01:29\n",
+       "99974   1997-10-07 09:50:46\n",
+       "99975   1998-01-28 15:55:52\n",
+       "99976   1998-03-30 18:33:39\n",
+       "99977   1997-12-29 17:24:39\n",
+       "99978   1997-10-03 20:40:24\n",
+       "99979   1998-02-27 20:31:31\n",
+       "99980   1998-03-02 18:25:00\n",
+       "99981   1997-11-13 10:31:17\n",
+       "99982   1997-09-26 14:15:10\n",
+       "99983   1998-02-26 13:35:02\n",
+       "99984   1998-02-18 20:51:54\n",
+       "99985   1998-01-02 17:01:34\n",
+       "99986   1997-11-29 09:24:48\n",
+       "99987   1998-03-31 21:50:12\n",
+       "99988   1998-04-10 13:49:04\n",
+       "99989   1998-02-27 19:45:03\n",
+       "99990   1997-12-17 12:01:37\n",
+       "99991   1998-04-15 17:10:37\n",
+       "99992   1997-10-17 18:14:45\n",
+       "99993   1997-12-05 16:12:30\n",
+       "99994   1997-11-20 12:16:16\n",
+       "99995   1997-11-21 21:10:44\n",
+       "99996   1997-11-17 11:39:03\n",
+       "99997   1997-09-20 15:49:55\n",
+       "99998   1997-12-17 14:52:36\n",
+       "99999   1997-11-19 09:13:03\n",
+       "Name: unix_timestamp, Length: 100000, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ratings.unix_timestamp.apply(datetime.datetime.fromtimestamp)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Movie table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +441,7 @@
        "4  http://us.imdb.com/M/title-exact?Copycat%20(1995)  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +546,7 @@
        "1681                 NaN  http://us.imdb.com/M/title-exact?Schrei%20aus%...  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +597,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +693,7 @@
        "max    943.000000   73.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +720,7 @@
        "Index(['user_id', 'age', 'gender', 'occupation', 'zip_code'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +804,7 @@
        "4        5       other      F"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +832,7 @@
        "(671, 5)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +857,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +889,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +918,7 @@
        "(1682, 5)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -827,7 +938,7 @@
        "(100000, 4)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -838,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -849,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1077,7 @@
        "4       883601324  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -986,7 +1097,7 @@
        "(100000, 8)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -997,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -1008,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1128,7 @@
        "(100000, 12)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1028,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1280,7 @@
        "4       887736696   60      M    retired    95076  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1251,7 +1362,7 @@
        "Length: 1664, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1262,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1421,7 +1532,7 @@
        "57371       876537106   39      M   marketing    43017  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1454,7 +1565,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1467,7 +1578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1486,7 +1597,7 @@
        "Name: title, dtype: int64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1499,7 +1610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1916,7 +2027,7 @@
        "[1664 rows x 2 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +2039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2006,7 +2117,7 @@
        "Star Kid (1997)                                 3  5.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
